Prevent from tabbing to a button that is out of viewport

--- a/src/assets/styles/portfolio/Portfolio.module.css
+++ b/src/assets/styles/portfolio/Portfolio.module.css
@@ -3,5 +3,4 @@
   flex-direction: column;
   padding: 48px;
   gap: 84px;
-  background-color: var(--color-bg);
 }
